Updating packages and cleaning security issues

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:css": "copyfiles css/*.css dist/",
     "build:js": "concat -o dist/opentok-annotation.js src/acc-pack-annotation.js src/annotation-widget.js && uglifyjs dist/opentok-annotation.js -o dist/opentok-annotation.min.js",
     "build:images": "copyfiles images/**/* dist/",
-    "build:logversion": "replace '(js-vsol-)(x.y.z)' '$1'$npm_package_version ./dist",
+    "build:logversion": "replace-in-file /x.y.z/ $npm_package_version ./dist/*.js --isRegex --verbose",
     "build": "mkdir dist && npm run build:js & npm run build:css & npm run build:images && npm run build:logversion",
     "test": "karma start"
   },
@@ -35,12 +35,11 @@
     "chai": "^4.2.0",
     "concat": "^3.0.0",
     "copyfiles": "^2.3.0",
-    "coverage": "^0.4.1",
-    "eslint": "^3.18.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.10.2",
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
     "html2js": "^0.2.0",
     "karma": "^5.1.1",
     "karma-chai": "^0.1.0",
@@ -52,12 +51,11 @@
     "karma-sinon": "^1.0.5",
     "merge-stream": "^2.0.0",
     "mocha": "^8.1.3",
-    "replace": "^0.3.0",
+    "replace-in-file": "^6.1.0",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.3",
     "uglify-js": "^3.10.2",
-    "watchify": "^3.11.1",
-    "yuidocjs": "^0.10.2"
+    "watchify": "^3.11.1"
   },
   "dependencies": {
     "jquery": "^3.5.1",
